--- a/docs/docs-ref-autogen/excel/excel.imagefittingmode.yml
+++ b/docs/docs-ref-autogen/excel/excel.imagefittingmode.yml
@@ -7,7 +7,7 @@ ms.lasthandoff: 11/09/2018
 ms.locfileid: "26220336"
 items:
 - uid: excel.Excel.ImageFittingMode
-  summary: '<span data-ttu-id="8349f-101">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8349f-101">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
+  summary: '<span data-ttu-id="92642-101">\[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="92642-101">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
   name: Excel.ImageFittingMode
   fullName: Excel.ImageFittingMode
   langs:
