--- a/docs/docs-ref-autogen/outlook_1_2/office.item.yml
+++ b/docs/docs-ref-autogen/outlook_1_2/office.item.yml
@@ -1,18 +1,18 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: b572fa82f4d94ee46312a7e8731194755188efd7
-ms.sourcegitcommit: 6c48441b8be51d3a9d7dc836e386230a155feceb
+ms.openlocfilehash: 2c200168f7c9bb4520c7b158258cb1164cf57023
+ms.sourcegitcommit: 2ef4b6e6f2f27ecb9abf01fefa4cffd9498ad5dc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/22/2019
-ms.locfileid: "30198093"
+ms.lasthandoff: 03/16/2019
+ms.locfileid: "30656617"
 items:
 - uid: Outlook_1_2.Office.Item
   summary: >-
-    <span data-ttu-id="7369e-101">item 命名空间用于访问当前选定的邮件、会议请求或约会。</span><span class="sxs-lookup"><span data-stu-id="7369e-101">The item namespace is used to access the currently selected message, meeting request, or appointment.</span></span> <span data-ttu-id="7369e-102">您可以通过使用`itemType`属性来确定项目的类型。</span><span class="sxs-lookup"><span data-stu-id="7369e-102">You can determine the type of the item by using the `itemType` property.</span></span>
+    <span data-ttu-id="4c52f-101">item 命名空间用于访问当前选定的邮件、会议请求或约会。</span><span class="sxs-lookup"><span data-stu-id="4c52f-101">The item namespace is used to access the currently selected message, meeting request, or appointment.</span></span> <span data-ttu-id="4c52f-102">您可以通过使用`itemType`属性来确定项目的类型。</span><span class="sxs-lookup"><span data-stu-id="4c52f-102">You can determine the type of the item by using the `itemType` property.</span></span>
 
 
-    <span data-ttu-id="7369e-103">\[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7369e-103">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
-  remarks: <table> <tr><td>[<span data-ttu-id="7369e-104">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="7369e-104">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="7369e-105">受限</span><span class="sxs-lookup"><span data-stu-id="7369e-105">Restricted</span></span></td></tr> <tr><td>[<span data-ttu-id="7369e-106">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="7369e-106">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="7369e-107">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="7369e-107">Compose or Read</span></span></td></tr> </table>
+    <span data-ttu-id="4c52f-103">\[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4c52f-103">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+  remarks: <table> <tr><td>[<span data-ttu-id="4c52f-104">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="4c52f-104">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="4c52f-105">受限</span><span class="sxs-lookup"><span data-stu-id="4c52f-105">Restricted</span></span></td></tr> <tr><td>[<span data-ttu-id="4c52f-106">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="4c52f-106">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="4c52f-107">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="4c52f-107">Compose or Read</span></span></td></tr> </table>
   name: Office.Item
   fullName: Office.Item
   langs:
@@ -25,20 +25,20 @@ items:
   - Outlook_1_2.Office.Item.itemType
 - uid: Outlook_1_2.Office.Item.loadCustomPropertiesAsync
   summary: >-
-    <span data-ttu-id="7369e-108">异步加载所选项目上此外接程序的自定义属性。</span><span class="sxs-lookup"><span data-stu-id="7369e-108">Asynchronously loads custom properties for this add-in on the selected item.</span></span>
+    <span data-ttu-id="4c52f-108">异步加载所选项目上此外接程序的自定义属性。</span><span class="sxs-lookup"><span data-stu-id="4c52f-108">Asynchronously loads custom properties for this add-in on the selected item.</span></span>
 
 
-    <span data-ttu-id="7369e-p102">自定义属性基于每个应用、每个项目存储为键/值对。此方法在回调中返回 CustomProperties，该回调提供访问特定于当前项目和当前外接程序的自定义属性的方法。自定义属性未在项目上加密，因此这不应用作安全存储。</span><span class="sxs-lookup"><span data-stu-id="7369e-p102">Custom properties are stored as key/value pairs on a per-app, per-item basis. This method returns a CustomProperties object in the callback, which provides methods to access the custom properties specific to the current item and the current add-in. Custom properties are not encrypted on the item, so this should not be used as secure storage.</span></span>
+    <span data-ttu-id="4c52f-109">自定义属性基于每个应用、每个项目存储为键/值对。</span><span class="sxs-lookup"><span data-stu-id="4c52f-109">Custom properties are stored as key/value pairs on a per-app, per-item basis.</span></span> <span data-ttu-id="4c52f-110">此方法在回调中返回一个 CustomProperties 对象, 该对象提供用于访问特定于当前项目和当前加载项的自定义属性的方法。</span><span class="sxs-lookup"><span data-stu-id="4c52f-110">This method returns a CustomProperties object in the callback, which provides methods to access the custom properties specific to the current item and the current add-in.</span></span> <span data-ttu-id="4c52f-111">自定义属性未在项目上加密，因此这不应用作安全存储。</span><span class="sxs-lookup"><span data-stu-id="4c52f-111">Custom properties are not encrypted on the item, so this should not be used as secure storage.</span></span>
 
 
-    <span data-ttu-id="7369e-p103">自定义属性作为 asyncResult.value 属性中的 CustomProperties 对象提供。此对象可用于获取、设置以及从项目中删除自定义属性，并将自定义属性集的更改重新保存到服务器。</span><span class="sxs-lookup"><span data-stu-id="7369e-p103">The custom properties are provided as a CustomProperties object in the asyncResult.value property. This object can be used to get, set, and remove custom properties from the item and save changes to the custom property set back to the server.</span></span>
+    <span data-ttu-id="4c52f-112">自定义属性作为 asyncResult 属性中的 CustomProperties 对象提供。</span><span class="sxs-lookup"><span data-stu-id="4c52f-112">The custom properties are provided as a CustomProperties object in the asyncResult.value property.</span></span> <span data-ttu-id="4c52f-113">此对象可用于获取、设置以及从项目中删除自定义属性，并将自定义属性集的更改重新保存到服务器。</span><span class="sxs-lookup"><span data-stu-id="4c52f-113">This object can be used to get, set, and remove custom properties from the item and save changes to the custom property set back to the server.</span></span>
 
 
-    <span data-ttu-id="7369e-114">\[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7369e-114">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="4c52f-114">\[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4c52f-114">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
   remarks: >-
-    <table> <tr><td>[<span data-ttu-id="7369e-115">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="7369e-115">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="7369e-116">ReadItem</span><span class="sxs-lookup"><span data-stu-id="7369e-116">ReadItem</span></span></td></tr> <tr><td>[<span data-ttu-id="7369e-117">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="7369e-117">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="7369e-118">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="7369e-118">Compose or Read</span></span></td></tr> </table><span data-ttu-id="7369e-119">
+    <table> <tr><td>[<span data-ttu-id="4c52f-115">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="4c52f-115">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="4c52f-116">ReadItem</span><span class="sxs-lookup"><span data-stu-id="4c52f-116">ReadItem</span></span></td></tr> <tr><td>[<span data-ttu-id="4c52f-117">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="4c52f-117">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="4c52f-118">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="4c52f-118">Compose or Read</span></span></td></tr> </table><span data-ttu-id="4c52f-119">
 
-    ####说明</span><span class="sxs-lookup"><span data-stu-id="7369e-119">
+    ####说明</span><span class="sxs-lookup"><span data-stu-id="4c52f-119">
 
     #### Examples</span></span>
 
@@ -96,30 +96,30 @@ items:
       description: ''
     parameters:
     - id: callback
-      description: <span data-ttu-id="7369e-120">方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。</span><span class="sxs-lookup"><span data-stu-id="7369e-120">When the method completes, the function passed in the callback parameter is called with a single parameter of type Office.AsyncResult.</span></span>
+      description: <span data-ttu-id="4c52f-120">方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。</span><span class="sxs-lookup"><span data-stu-id="4c52f-120">When the method completes, the function passed in the callback parameter is called with a single parameter of type Office.AsyncResult.</span></span>
       type:
       - '(asyncResult: Office.AsyncResult<CustomProperties>) => void'
     - id: userContext
-      description: <span data-ttu-id="7369e-121">可选。</span><span class="sxs-lookup"><span data-stu-id="7369e-121">Optional.</span></span> <span data-ttu-id="7369e-122">开发人员可以提供他们想要在回调函数中访问的任何对象。</span><span class="sxs-lookup"><span data-stu-id="7369e-122">Developers can provide any object they wish to access in the callback function.</span></span> <span data-ttu-id="7369e-123">此对象可以通过回调函数中的 asyncContext 属性来访问。</span><span class="sxs-lookup"><span data-stu-id="7369e-123">This object can be accessed by the asyncResult.asyncContext property in the callback function.</span></span>
+      description: <span data-ttu-id="4c52f-121">可选。</span><span class="sxs-lookup"><span data-stu-id="4c52f-121">Optional.</span></span> <span data-ttu-id="4c52f-122">开发人员可以提供他们想要在回调函数中访问的任何对象。</span><span class="sxs-lookup"><span data-stu-id="4c52f-122">Developers can provide any object they wish to access in the callback function.</span></span> <span data-ttu-id="4c52f-123">此对象可以通过回调函数中的 asyncContext 属性来访问。</span><span class="sxs-lookup"><span data-stu-id="4c52f-123">This object can be accessed by the asyncResult.asyncContext property in the callback function.</span></span>
       type:
       - any
 - uid: Outlook_1_2.Office.Item.body
   summary: >-
-    <span data-ttu-id="7369e-124">获取一个提供用于处理项目正文的方法的对象。</span><span class="sxs-lookup"><span data-stu-id="7369e-124">Gets an object that provides methods for manipulating the body of an item.</span></span>
+    <span data-ttu-id="4c52f-124">获取一个提供用于处理项目正文的方法的对象。</span><span class="sxs-lookup"><span data-stu-id="4c52f-124">Gets an object that provides methods for manipulating the body of an item.</span></span>
 
 
-    <span data-ttu-id="7369e-125">\[[API 集: 邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7369e-125">\[ [API set: Mailbox 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="4c52f-125">\[[API 集: 邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4c52f-125">\[ [API set: Mailbox 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
   remarks: >-
-    <table> <tr><td>[<span data-ttu-id="7369e-126">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="7369e-126">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="7369e-127">ReadItem</span><span class="sxs-lookup"><span data-stu-id="7369e-127">ReadItem</span></span></td></tr> <tr><td>[<span data-ttu-id="7369e-128">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="7369e-128">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="7369e-129">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="7369e-129">Compose or Read</span></span></td></tr> </table><span data-ttu-id="7369e-130">
+    <table> <tr><td>[<span data-ttu-id="4c52f-126">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="4c52f-126">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="4c52f-127">ReadItem</span><span class="sxs-lookup"><span data-stu-id="4c52f-127">ReadItem</span></span></td></tr> <tr><td>[<span data-ttu-id="4c52f-128">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="4c52f-128">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="4c52f-129">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="4c52f-129">Compose or Read</span></span></td></tr> </table><span data-ttu-id="4c52f-130">
 
-    ####说明</span><span class="sxs-lookup"><span data-stu-id="7369e-130">
+    ####说明</span><span class="sxs-lookup"><span data-stu-id="4c52f-130">
 
     #### Examples</span></span>
 
 
     ```javascript
 
-    // This example gets the body of the message in plain text.
+    // This example gets the body of the item as plain text.
 
     Office.context.mailbox.item.body.getAsync(
         "text",
@@ -149,17 +149,17 @@ items:
       - Body
 - uid: Outlook_1_2.Office.Item.itemType
   summary: >-
-    <span data-ttu-id="7369e-131">获取实例表示的项的类型。</span><span class="sxs-lookup"><span data-stu-id="7369e-131">Gets the type of item that an instance represents.</span></span>
+    <span data-ttu-id="4c52f-131">获取实例表示的项的类型。</span><span class="sxs-lookup"><span data-stu-id="4c52f-131">Gets the type of item that an instance represents.</span></span>
 
 
-    <span data-ttu-id="7369e-132">itemType 属性返回其中一个 ItemType 枚举值，指示 item 对象实例是邮件还是约会。</span><span class="sxs-lookup"><span data-stu-id="7369e-132">The itemType property returns one of the ItemType enumeration values, indicating whether the item object instance is a message or an appointment.</span></span>
+    <span data-ttu-id="4c52f-132">itemtype 属性返回一个 itemType 枚举值, 指示 item 对象实例是邮件还是约会。</span><span class="sxs-lookup"><span data-stu-id="4c52f-132">The itemType property returns one of the ItemType enumeration values, indicating whether the item object instance is a message or an appointment.</span></span>
 
 
-    <span data-ttu-id="7369e-133">\[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7369e-133">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="4c52f-133">\[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4c52f-133">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
   remarks: >-
-    <table> <tr><td>[<span data-ttu-id="7369e-134">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="7369e-134">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="7369e-135">ReadItem</span><span class="sxs-lookup"><span data-stu-id="7369e-135">ReadItem</span></span></td></tr> <tr><td>[<span data-ttu-id="7369e-136">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="7369e-136">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="7369e-137">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="7369e-137">Compose or Read</span></span></td></tr> </table><span data-ttu-id="7369e-138">
+    <table> <tr><td>[<span data-ttu-id="4c52f-134">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="4c52f-134">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="4c52f-135">ReadItem</span><span class="sxs-lookup"><span data-stu-id="4c52f-135">ReadItem</span></span></td></tr> <tr><td>[<span data-ttu-id="4c52f-136">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="4c52f-136">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="4c52f-137">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="4c52f-137">Compose or Read</span></span></td></tr> </table><span data-ttu-id="4c52f-138">
 
-    ####说明</span><span class="sxs-lookup"><span data-stu-id="7369e-138">
+    ####说明</span><span class="sxs-lookup"><span data-stu-id="4c52f-138">
 
     #### Examples</span></span>
 
